[MPIR-341] Align mojo class names to element names in pom.xml
Massive cleanup and unification of report name patterns.

git-svn-id: https://svn.apache.org/repos/asf/maven/plugins/trunk@1732680 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/project-info-reports_nl.properties
+++ b/src/main/resources/project-info-reports_nl.properties
@@ -15,17 +15,17 @@
 # specific language governing permissions and limitations
 # under the License.
 
-report.cim.anthill.intro                                           = Dit project gebruikt {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.cim.bamboo.intro                                            = Dit project gebruikt {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.cim.buildforge.intro                                        = Dit project gebruikt {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.cim.continuum.intro                                         = Dit project gebruikt {Continuum, http://continuum.apache.org/}.
-report.cim.cruisecontrol.intro                                     = Dit project gebruikt {CruiseControl, http://cruisecontrol.sourceforge.net/}.
-report.cim.description                                             = Dit is een link naar de definities van alle continuous integration processen, die code bouwen en testen op een frequente reguliere basis.
-report.cim.general.intro                                           = Dit project gebruikt Continuous Integration System.
-report.cim.hudson.intro                                            = Dit project gebruikt {Hudson, http://hudson-ci.org/}.
-report.cim.jenkins.intro                                           = Dit project gebruikt {Jenkins, https://jenkins-ci.org/}.
-report.cim.luntbuild.intro                                         = Dit project gebruikt {Luntbuild, http://luntbuild.javaforge.com/}.
-report.cim.travis.intro                                            = Dit project gebruikt {Travis CI, https://travis-ci.org/}.
+report.ci-management.anthill.intro                                 = Dit project gebruikt {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
+report.ci-management.bamboo.intro                                  = Dit project gebruikt {Bamboo, http://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Dit project gebruikt {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
+report.ci-management.continuum.intro                               = Dit project gebruikt {Continuum, http://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Dit project gebruikt {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.description                                   = Dit is een link naar de definities van alle continuous integration processen, die code bouwen en testen op een frequente reguliere basis.
+report.ci-management.general.intro                                 = Dit project gebruikt Continuous Integration System.
+report.ci-management.hudson.intro                                  = Dit project gebruikt {Hudson, http://hudson-ci.org/}.
+report.ci-management.jenkins.intro                                 = Dit project gebruikt {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.luntbuild.intro                               = Dit project gebruikt {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.travis.intro                                  = Dit project gebruikt {Travis CI, https://travis-ci.org/}.
 report.dependencies.file.details.columntitle.debuginformation      = Geeft aan of deze afhankelijkheden met debug-informatie gecompileerd zijn.
 report.dependencies.graph.tables.licenses                          = Vergunningen
 report.dependencies.graph.tables.unknown                           =
