--- a/src/main/resources/project-info-reports_no.properties
+++ b/src/main/resources/project-info-reports_no.properties
@@ -15,30 +15,30 @@
 # specific language governing permissions and limitations
 # under the License.
 
-report.cim.access                                                  = Tilgang
-report.cim.anthill.intro                                           = Dette prosjektet bruker {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.cim.bamboo.intro                                            = Dette prosjektet bruker {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.cim.buildforge.intro                                        = Dette prosjektet bruker {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.cim.continuum.intro                                         = Dette prosjektet bruker {Continuum, http://continuum.apache.org/}.
-report.cim.cruisecontrol.intro                                     = This project uses {CruiseControl, http://cruisecontrol.sourceforge.net/}.
-report.cim.description                                             = Dette er en lenke til definisjoner av alle kontinuerlig intgrasjon prosesser som bygger og tester kode p\u00E5 ofte og regul\u00E6r basis.
-report.cim.general.intro                                           = Dette prosjektet bruker kontinuerlig bygge system.
-report.cim.hudson.intro                                            = Dette prosjektet bruker {Hudson, http://hudson-ci.org/}.
-report.cim.jenkins.intro                                           = Dette prosjektet bruker {Jenkins, https://jenkins-ci.org/}.
-report.cim.luntbuild.intro                                         = Dette prosjektet bruker {Luntbuild, http://luntbuild.javaforge.com/}.
-report.cim.travis.intro                                            = Dette prosjektet bruker {Travis CI, https://travis-ci.org/}.
-report.cim.name                                                    = Kontinueriig integrasjon
-report.cim.nocim                                                   = Intet kontinuerlig integrasjons administrasjons system er definert. Vennligst sjekk igjen ved en senere anledning.
-report.cim.notifiers.column.address                                = Adresse
-report.cim.notifiers.column.configuration                          = Konfigurasjon
-report.cim.notifiers.column.type                                   = Type
-report.cim.notifiers.intro                                         = Konfigurasjon for varsling av utviklere/bruker om en bygging feilet, inkludert bruker informasjon og vrslings modus.
-report.cim.notifiers.nolist                                        = Ingen varsling er definert. Vennligst sjekk igjen senere.
-report.cim.notifiers.title                                         = Varsler
-report.cim.nourl                                                   = Ingen url til kontinuerlig integrasjons system er definert.
-report.cim.overview.title                                          = Oversikt
-report.cim.title                                                   = Kontinuerlig integrasjon
-report.cim.url                                                     = F\u00F8lgende er en lenke til kontinuerlig integrasjons systemet som er brukt av prosjektet.
+report.ci-management.access                                        = Tilgang
+report.ci-management.anthill.intro                                 = Dette prosjektet bruker {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
+report.ci-management.bamboo.intro                                  = Dette prosjektet bruker {Bamboo, http://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Dette prosjektet bruker {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
+report.ci-management.continuum.intro                               = Dette prosjektet bruker {Continuum, http://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = This project uses {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.description                                   = Dette er en lenke til definisjoner av alle kontinuerlig intgrasjon prosesser som bygger og tester kode p\u00E5 ofte og regul\u00E6r basis.
+report.ci-management.general.intro                                 = Dette prosjektet bruker kontinuerlig bygge system.
+report.ci-management.hudson.intro                                  = Dette prosjektet bruker {Hudson, http://hudson-ci.org/}.
+report.ci-management.jenkins.intro                                 = Dette prosjektet bruker {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.luntbuild.intro                               = Dette prosjektet bruker {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.travis.intro                                  = Dette prosjektet bruker {Travis CI, https://travis-ci.org/}.
+report.ci-management.name                                          = Kontinueriig integrasjon
+report.ci-management.nocim                                         = Intet kontinuerlig integrasjons administrasjons system er definert. Vennligst sjekk igjen ved en senere anledning.
+report.ci-management.notifiers.column.address                      = Adresse
+report.ci-management.notifiers.column.configuration                = Konfigurasjon
+report.ci-management.notifiers.column.type                         = Type
+report.ci-management.notifiers.intro                               = Konfigurasjon for varsling av utviklere/bruker om en bygging feilet, inkludert bruker informasjon og vrslings modus.
+report.ci-management.notifiers.nolist                              = Ingen varsling er definert. Vennligst sjekk igjen senere.
+report.ci-management.notifiers.title                               = Varsler
+report.ci-management.nourl                                         = Ingen url til kontinuerlig integrasjons system er definert.
+report.ci-management.overview.title                                = Oversikt
+report.ci-management.title                                         = Kontinuerlig integrasjon
+report.ci-management.url                                           = F\u00F8lgende er en lenke til kontinuerlig integrasjons systemet som er brukt av prosjektet.
 report.dependencies.column.artifactId                              = ArtifactId
 report.dependencies.column.classifier                              = Klassifikasjon
 report.dependencies.column.description                             = Beskrivelse
@@ -83,23 +83,23 @@ report.dependency-convergence.stats.modules                        = Antall sub 
 report.dependency-convergence.title                                = Reactor Avhengighets sammenfall
 report.index.nodescription                                         = Det er for \u00F8yeblikket inegn beskrivelse forbundet med dette prosjektet.
 report.index.title                                                 = Om
-report.issuetracking.bugzilla.intro                                = Dette prosjektet bruker  {Bugzilla, http://www.bugzilla.org/}.
-report.issuetracking.custom.intro                                  = Dette prosjektet bruker %issueManagementSystem% for \u00E5 handtere saker.
-report.issuetracking.description                                   = Dette er en lenke til saks handterings systemet for dette prosjektet. Saker (feil, forbedringer, endringsanmodninger) kan lages og sp\u00F8rres p\u00E5 via denne lenken.
-report.issuetracking.general.intro                                 = Dette prosjektet bruker et saks handterings system for \u00E5 administrere dets saker.
-report.issuetracking.intro                                         = Saker, feil og forbedringsanmodninger b\u00F8r sendes til f\u00F8lgende saks handterings system for dette prosjektet.
-report.issuetracking.jira.intro                                    = Dette prosjektet bruker {JIRA, http://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
-report.issuetracking.name                                          = Sakshandtering
-report.issuetracking.noissueManagement                             = Intet saks handterings system er definert. Vennligst sjekk igjen senere.
-report.issuetracking.overview.title                                = Oversikt
-report.issuetracking.scarab.intro                                  = Dette prosjktet bruker  {Scarab, http://scarab.tigris.org/}.
-report.issuetracking.title                                         = Saks handtering
-report.license.description                                         = Dette er en lenke til definisjoner av prosjekt lisenser.
-report.license.name                                                = Prosjekt lisens
-report.license.nolicense                                           = Ingen prosjekt lisens er definert for dette prosjektet.
-report.license.overview.intro                                      = Normalt er lisenser listet for dette prosjektet, prosjektets eget og ikke avhengighetenes.
-report.license.overview.title                                      = Oversikt
-report.license.title                                               = Prosjekt lisens
+report.issue-management.bugzilla.intro                             = Dette prosjektet bruker  {Bugzilla, http://www.bugzilla.org/}.
+report.issue-management.custom.intro                               = Dette prosjektet bruker %issueManagementSystem% for \u00E5 handtere saker.
+report.issue-management.description                                = Dette er en lenke til saks handterings systemet for dette prosjektet. Saker (feil, forbedringer, endringsanmodninger) kan lages og sp\u00F8rres p\u00E5 via denne lenken.
+report.issue-management.general.intro                              = Dette prosjektet bruker et saks handterings system for \u00E5 administrere dets saker.
+report.issue-management.intro                                      = Saker, feil og forbedringsanmodninger b\u00F8r sendes til f\u00F8lgende saks handterings system for dette prosjektet.
+report.issue-management.jira.intro                                 = Dette prosjektet bruker {JIRA, http://www.atlassian.com/software/jira} a J2EE-based, issue tracking and project management application.
+report.issue-management.name                                       = Sakshandtering
+report.issue-management.noissueManagement                          = Intet saks handterings system er definert. Vennligst sjekk igjen senere.
+report.issue-management.overview.title                             = Oversikt
+report.issue-management.scarab.intro                               = Dette prosjktet bruker  {Scarab, http://scarab.tigris.org/}.
+report.issue-management.title                                      = Saks handtering
+report.licenses.description                                        = Dette er en lenke til definisjoner av prosjekt lisenser.
+report.licenses.name                                               = Prosjekt lisens
+report.licenses.nolicense                                          = Ingen prosjekt lisens er definert for dette prosjektet.
+report.licenses.overview.intro                                     = Normalt er lisenser listet for dette prosjektet, prosjektets eget og ikke avhengighetenes.
+report.licenses.overview.title                                     = Oversikt
+report.licenses.title                                              = Prosjekt lisens
 report.mailing-lists.column.archive                                = Arkiv
 report.mailing-lists.column.name                                   = Navn
 report.mailing-lists.column.otherArchives                          = Andre arkiv
@@ -165,34 +165,34 @@ report.summary.organization.title                                  = Prosjekt or
 report.summary.organization.url                                    = URL
 report.summary.title                                               = Prosjekt oppsummering
 report.summary.value                                               = Verdi
-report.team-list.contributors.actualtime                           = Virkelig tid (GMT)
-report.team-list.contributors.email                                = E-post
-report.team-list.contributors.intro                                = F\u00F8lgende personer har bidratt til dette prosjektet ved \u00E5 komme med forslag, rettelser eller dokumentasjon.
-report.team-list.contributors.name                                 = Navn
-report.team-list.contributors.organization                         = Organisasjon
-report.team-list.contributors.organizationurl                      = Organisasjon URL
-report.team-list.contributors.properties                           = Verdier
-report.team-list.contributors.roles                                = Roller
-report.team-list.contributors.timezone                             = Tidssone
-report.team-list.contributors.title                                = Innmeldere
-report.team-list.contributors.url                                  = URL
-report.team-list.description                                       = Dette dokumentet gir informasjon om medlemmer av dette prosjektet. Dette er individer som har bidratt til prosjektet i en eller annen form.
-report.team-list.developers.actualtime                             = Virkelig tid (GMT)
-report.team-list.developers.email                                  = E-post
-report.team-list.developers.id                                     = Id
-report.team-list.developers.intro                                  = F\u00F8lgende er en liste over utviklere med innmeldings privilegier som direkte har bidratt til prosjektet p\u00E5 en eller annen m\u00E5te.
-report.team-list.developers.name                                   = Navn
-report.team-list.developers.organization                           = Organisasjon
-report.team-list.developers.organizationurl                        = Organisasjon URL
-report.team-list.developers.properties                             = Verdier
-report.team-list.developers.roles                                  = Roller
-report.team-list.developers.timezone                               = Tidssone
-report.team-list.developers.title                                  = Medlemmer
-report.team-list.developers.url                                    = URL
-report.team-list.intro.description1                                = Et suksessrikt prosjekt beh\u00F8ver mange mennesker som opptrer i mange roller. Men medlemmer skriver kode eller dokumentasjon, mens andre er testere, leverer rettelser eller forslag.
-report.team-list.intro.description2                                = Denne gruppen best\u00E5r av medlemmer og innmeldere. Medlemmer har direkte tilgang til kildekode i prosjektet og kan aktivt utvikle kodebase. Innmeldere forbedrer prosjekt ved \u00E5 bidra med rettelekser eller forslag til medlemmene. Antallet innmeldere i prosjektet er ubegrenset. Bli involvert i dag. Alle innmeldere i prosjektet er h\u00F8yt verdsatt.
-report.team-list.intro.title                                       = Gruppen
-report.team-list.name                                              = Prosjekt gruppen
-report.team-list.nocontributor                                     = Det er ingen innmeldere listet for dette prosjektet. Vennligst sjekk igjen senere.
-report.team-list.nodeveloper                                       = Det er ingen utviklere som arbeider p\u00E5 dette prosjektet.
-report.team-list.title                                             = Gruppe liste
+report.team.contributors.actualtime                                = Virkelig tid (GMT)
+report.team.contributors.email                                     = E-post
+report.team.contributors.intro                                     = F\u00F8lgende personer har bidratt til dette prosjektet ved \u00E5 komme med forslag, rettelser eller dokumentasjon.
+report.team.contributors.name                                      = Navn
+report.team.contributors.organization                              = Organisasjon
+report.team.contributors.organizationurl                           = Organisasjon URL
+report.team.contributors.properties                                = Verdier
+report.team.contributors.roles                                     = Roller
+report.team.contributors.timezone                                  = Tidssone
+report.team.contributors.title                                     = Innmeldere
+report.team.contributors.url                                       = URL
+report.team.description                                            = Dette dokumentet gir informasjon om medlemmer av dette prosjektet. Dette er individer som har bidratt til prosjektet i en eller annen form.
+report.team.developers.actualtime                                  = Virkelig tid (GMT)
+report.team.developers.email                                       = E-post
+report.team.developers.id                                          = Id
+report.team.developers.intro                                       = F\u00F8lgende er en liste over utviklere med innmeldings privilegier som direkte har bidratt til prosjektet p\u00E5 en eller annen m\u00E5te.
+report.team.developers.name                                        = Navn
+report.team.developers.organization                                = Organisasjon
+report.team.developers.organizationurl                             = Organisasjon URL
+report.team.developers.properties                                  = Verdier
+report.team.developers.roles                                       = Roller
+report.team.developers.timezone                                    = Tidssone
+report.team.developers.title                                       = Medlemmer
+report.team.developers.url                                         = URL
+report.team.intro.description1                                     = Et suksessrikt prosjekt beh\u00F8ver mange mennesker som opptrer i mange roller. Men medlemmer skriver kode eller dokumentasjon, mens andre er testere, leverer rettelser eller forslag.
+report.team.intro.description2                                     = Denne gruppen best\u00E5r av medlemmer og innmeldere. Medlemmer har direkte tilgang til kildekode i prosjektet og kan aktivt utvikle kodebase. Innmeldere forbedrer prosjekt ved \u00E5 bidra med rettelekser eller forslag til medlemmene. Antallet innmeldere i prosjektet er ubegrenset. Bli involvert i dag. Alle innmeldere i prosjektet er h\u00F8yt verdsatt.
+report.team.intro.title                                            = Gruppen
+report.team.name                                                   = Prosjekt gruppen
+report.team.nocontributor                                          = Det er ingen innmeldere listet for dette prosjektet. Vennligst sjekk igjen senere.
+report.team.nodeveloper                                            = Det er ingen utviklere som arbeider p\u00E5 dette prosjektet.
+report.team.title                                                  = Gruppe liste
