--- a/src/main/resources/project-info-reports_it.properties
+++ b/src/main/resources/project-info-reports_it.properties
@@ -15,19 +15,19 @@
 # specific language governing permissions and limitations
 # under the License.
 
-report.cim.access                                                  = Accesso
-report.cim.anthill.intro                                           = Questo progetto usa {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
-report.cim.bamboo.intro                                            = Questo progetto usa {Bamboo, http://www.atlassian.com/software/bamboo/}.
-report.cim.buildforge.intro                                        = Questo progetto usa {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
-report.cim.continuum.intro                                         = Questo progetto usa {Continuum, http://continuum.apache.org/}.
-report.cim.cruisecontrol.intro                                     = Questo progetto usa {CruiseControl, http://cruisecontrol.sourceforge.net/}.
-report.cim.hudson.intro                                            = Questo progetto usa {Hudson, http://hudson-ci.org/}.
-report.cim.jenkins.intro                                           = Questo progetto usa {Jenkins, https://jenkins-ci.org/}.
-report.cim.luntbuild.intro                                         = Questo progetto usa {Luntbuild, http://luntbuild.javaforge.com/}.
-report.cim.travis.intro                                            = Questo progetto usa {Travis CI, https://travis-ci.org/}.
+report.ci-management.access                                        = Accesso
+report.ci-management.anthill.intro                                 = Questo progetto usa {Anthill, http://www.anthillpro.com/html/products/anthillos/}.
+report.ci-management.bamboo.intro                                  = Questo progetto usa {Bamboo, http://www.atlassian.com/software/bamboo/}.
+report.ci-management.buildforge.intro                              = Questo progetto usa {Build Forge, http://www-306.ibm.com/software/awdtools/buildforge/enterprise/}.
+report.ci-management.continuum.intro                               = Questo progetto usa {Continuum, http://continuum.apache.org/}.
+report.ci-management.cruisecontrol.intro                           = Questo progetto usa {CruiseControl, http://cruisecontrol.sourceforge.net/}.
+report.ci-management.hudson.intro                                  = Questo progetto usa {Hudson, http://hudson-ci.org/}.
+report.ci-management.jenkins.intro                                 = Questo progetto usa {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.luntbuild.intro                               = Questo progetto usa {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.travis.intro                                  = Questo progetto usa {Travis CI, https://travis-ci.org/}.
 report.dependencies.graph.tables.licenses                          = Licenze
 report.dependencies.graph.tables.unknown                           = Non definita
 report.index.nodescription                                         = Al momento non esiste alcuna descrizione associata a questo progetto.
 report.index.title                                                 = Benvenuto in
-report.license.name                                                = Licenza
-report.license.title                                               = Licenza
+report.licenses.name                                               = Licenza
+report.licenses.title                                              = Licenza
