[MPIR-394] jenkins-ci.org -> jenkins.io

--- a/src/main/resources/project-info-reports_sv.properties
+++ b/src/main/resources/project-info-reports_sv.properties
@@ -24,7 +24,7 @@ report.ci-management.cruisecontrol.intro                           = Detta proje
 report.ci-management.description                                   = Detta \u00e4r en l\u00e4nk till definitionen av alla continuous integration-processer som bygger och testar kod p\u00e5 regelbunden basis.
 report.ci-management.general.intro                                 = Detta projekt anv\u00e4nder ett continuous integration-system.
 report.ci-management.hudson.intro                                  = Detta projekt anv\u00e4nder {Hudson, http://hudson-ci.org/}.
-report.ci-management.jenkins.intro                                 = Detta projekt anv\u00e4nder {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.jenkins.intro                                 = Detta projekt anv\u00e4nder {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Detta projekt anv\u00e4nder {Luntbuild, http://luntbuild.javaforge.com/}.
 report.ci-management.travis.intro                                  = Detta projekt anv\u00e4nder {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Continuous Integration
