--- a/src/main/resources/project-info-reports_cs.properties
+++ b/src/main/resources/project-info-reports_cs.properties
@@ -24,7 +24,7 @@ report.ci-management.cruisecontrol.intro                           = Tento proje
 report.ci-management.description                                   = Tento odkaz vede na definice v\u0161ech proces\u016f nep\u0159etr\u017eit\u00e9 integrace, kter\u00e9 pravideln\u011b a \u010dasto sestavuj\u00ed a testuj\u00ed k\u00f3d.
 report.ci-management.general.intro                                 = Tento projekt pou\u017e\u00edv\u00e1 syst\u00e9m nep\u0159etr\u017eit\u00e9 integrace.
 report.ci-management.hudson.intro                                  = Tento projekt pou\u017e\u00edv\u00e1 {Hudson, http://hudson-ci.org/}.
-report.ci-management.jenkins.intro                                 = Tento projekt pou\u017e\u00edv\u00e1 {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.jenkins.intro                                 = Tento projekt pou\u017e\u00edv\u00e1 {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Tento projekt pou\u017e\u00edv\u00e1 {Luntbuild, http://luntbuild.javaforge.com/}.
 report.ci-management.travis.intro                                  = Tento projekt pou\u017e\u00edv\u00e1 {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Nep\u0159etr\u017eit\u00e1 integrace
