--- a/src/main/resources/project-info-reports_de.properties
+++ b/src/main/resources/project-info-reports_de.properties
@@ -24,7 +24,7 @@ report.ci-management.cruisecontrol.intro                           = Dieses Proj
 report.ci-management.description                                   = Informationen \u00fcber das Continuous-Integration-System dieses Projektes.
 report.ci-management.general.intro                                 = Dieses Projekt verwendet ein Continuous Integration System.
 report.ci-management.hudson.intro                                  = Dieses Projekt verwendet {Hudson, http://hudson-ci.org/}.
-report.ci-management.jenkins.intro                                 = Dieses Projekt verwendet {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.jenkins.intro                                 = Dieses Projekt verwendet {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Dieses Projekt verwendet {Luntbuild, http://luntbuild.javaforge.com/}.
 report.ci-management.travis.intro                                  = Dieses Projekt verwendet {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Continuous-Integration
