--- a/src/main/resources/project-info-reports_fr.properties
+++ b/src/main/resources/project-info-reports_fr.properties
@@ -24,7 +24,7 @@ report.ci-management.cruisecontrol.intro                           = Ce projet u
 report.ci-management.description                                   = C'est un lien au syst\u00e8me d'int\u00e9gration continue pour ce projet qui construit et teste le code de mani\u00e8re fr\u00e9quente.
 report.ci-management.general.intro                                 = Ce projet utilise un syst\u00e8me d'int\u00e9gration continue.
 report.ci-management.hudson.intro                                  = Ce projet utilise {Hudson, http://hudson-ci.org/}.
-report.ci-management.jenkins.intro                                 = Ce projet utilise {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.jenkins.intro                                 = Ce projet utilise {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Ce projet utilise {Luntbuild, http://luntbuild.javaforge.com/}.
 report.ci-management.travis.intro                                  = Ce projet utilise {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Int\u00e9gration continue
