--- a/src/main/resources/project-info-reports_gl.properties
+++ b/src/main/resources/project-info-reports_gl.properties
@@ -24,7 +24,7 @@ report.ci-management.cruisecontrol.intro                           = Este proxec
 report.ci-management.description                                   = Enlace \u00E1s definicio\u00F3ns dos procesos de integraci\u00f3n continua que constr\u00FAen e proban o c\u00f3digo de forma frecuente e regular.
 report.ci-management.general.intro                                 = Este proxecto usa un Sistema de Integraci\u00f3n Continua
 report.ci-management.hudson.intro                                  = Este proxecto usa {Hudson, http://hudson-ci.org/}.
-report.ci-management.jenkins.intro                                 = Este proxecto usa {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.jenkins.intro                                 = Este proxecto usa {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Este proxecto usa {Luntbuild, http://luntbuild.javaforge.com/}.
 report.ci-management.travis.intro                                  = Este proxecto usa {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Integraci\u00f3n Continua
