--- a/src/main/resources/project-info-reports_it.properties
+++ b/src/main/resources/project-info-reports_it.properties
@@ -22,7 +22,7 @@ report.ci-management.buildforge.intro                              = Questo prog
 report.ci-management.continuum.intro                               = Questo progetto usa {Continuum, http://continuum.apache.org/}.
 report.ci-management.cruisecontrol.intro                           = Questo progetto usa {CruiseControl, http://cruisecontrol.sourceforge.net/}.
 report.ci-management.hudson.intro                                  = Questo progetto usa {Hudson, http://hudson-ci.org/}.
-report.ci-management.jenkins.intro                                 = Questo progetto usa {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.jenkins.intro                                 = Questo progetto usa {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Questo progetto usa {Luntbuild, http://luntbuild.javaforge.com/}.
 report.ci-management.travis.intro                                  = Questo progetto usa {Travis CI, https://travis-ci.org/}.
 report.dependencies.graph.tables.licenses                          = Licenze
