--- a/src/main/resources/project-info-reports_ko.properties
+++ b/src/main/resources/project-info-reports_ko.properties
@@ -22,7 +22,7 @@ report.ci-management.buildforge.intro                              = \uc774 \ud5
 report.ci-management.continuum.intro                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Continuum, http://continuum.apache.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.cruisecontrol.intro                           = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {CruiseControl, http://cruisecontrol.sourceforge.net/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.hudson.intro                                  = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Hudson, http://hudson-ci.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
-report.ci-management.jenkins.intro                                 = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Jenkins, https://jenkins-ci.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
+report.ci-management.jenkins.intro                                 = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Jenkins, https://www.jenkins.io/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.luntbuild.intro                               = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Luntbuild, http://luntbuild.javaforge.com/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.travis.intro                                  = \uc774 \ud504\ub85c\uc81d\ud2b8\ub294 {Travis CI, https://travis-ci.org/}\uc744 \uc0ac\uc6a9\ud569\ub2c8\ub2e4.
 report.ci-management.description                                   = \uc774\ub294 \uc815\uae30\uc801\uc73c\ub85c \uc218\ud589\ud558\ub294 \ube4c\ub4dc/\ud14c\uc2a4\ud2b8\uc5d0 \ub300\ud55c \uc5f0\uc18d \ud1b5\ud569 \uacf5\uc815\uc5d0 \ub300\ud55c \ub9c1\ud06c\uc785\ub2c8\ub2e4.
