--- a/src/main/resources/project-info-reports_lt.properties
+++ b/src/main/resources/project-info-reports_lt.properties
@@ -24,7 +24,7 @@ report.ci-management.cruisecontrol.intro                           = \u0160is pr
 report.ci-management.description                                   = Nuoroda \u012f testinio integravimo apra\u0161us, kurie periodi\u0161kai vykdo programos surinkimui ir testavim\u0105.
 report.ci-management.general.intro                                 = \u0160is projektas naudoja testin\u0119 integravimo sistem\u0105.
 report.ci-management.hudson.intro                                  = \u0160is projektas naudoja {Hudson, http://hudson-ci.org/}.
-report.ci-management.jenkins.intro                                 = \u0160is projektas naudoja {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.jenkins.intro                                 = \u0160is projektas naudoja {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = \u0160is projektas naudoja {Luntbuild, http://luntbuild.javaforge.com/}.
 report.ci-management.travis.intro                                  = \u0160is projektas naudoja {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Testinis integravimas
