--- a/src/main/resources/project-info-reports_nl.properties
+++ b/src/main/resources/project-info-reports_nl.properties
@@ -23,7 +23,7 @@ report.ci-management.cruisecontrol.intro                           = Dit project
 report.ci-management.description                                   = Dit is een link naar de definities van alle continuous integration processen, die code bouwen en testen op een frequente reguliere basis.
 report.ci-management.general.intro                                 = Dit project gebruikt Continuous Integration System.
 report.ci-management.hudson.intro                                  = Dit project gebruikt {Hudson, http://hudson-ci.org/}.
-report.ci-management.jenkins.intro                                 = Dit project gebruikt {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.jenkins.intro                                 = Dit project gebruikt {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Dit project gebruikt {Luntbuild, http://luntbuild.javaforge.com/}.
 report.ci-management.travis.intro                                  = Dit project gebruikt {Travis CI, https://travis-ci.org/}.
 report.dependencies.file.details.columntitle.debuginformation      = Geeft aan of deze afhankelijkheden met debug-informatie gecompileerd zijn.
