--- a/src/main/resources/project-info-reports_no.properties
+++ b/src/main/resources/project-info-reports_no.properties
@@ -24,7 +24,7 @@ report.ci-management.cruisecontrol.intro                           = This projec
 report.ci-management.description                                   = Dette er en lenke til definisjoner av alle kontinuerlig intgrasjon prosesser som bygger og tester kode p\u00E5 ofte og regul\u00E6r basis.
 report.ci-management.general.intro                                 = Dette prosjektet bruker kontinuerlig bygge system.
 report.ci-management.hudson.intro                                  = Dette prosjektet bruker {Hudson, http://hudson-ci.org/}.
-report.ci-management.jenkins.intro                                 = Dette prosjektet bruker {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.jenkins.intro                                 = Dette prosjektet bruker {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Dette prosjektet bruker {Luntbuild, http://luntbuild.javaforge.com/}.
 report.ci-management.travis.intro                                  = Dette prosjektet bruker {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Kontinueriig integrasjon
