--- a/src/main/resources/project-info-reports_sk.properties
+++ b/src/main/resources/project-info-reports_sk.properties
@@ -24,7 +24,7 @@ report.ci-management.cruisecontrol.intro                           = Tento proje
 report.ci-management.description                                   = Nasledovn\u00e1 linka odkazuje na defin\u00edcie v\u0161etk\u00fdch procesov zaregistrovan\u00fdch v integra\u010dnom syst\u00e9me, ktor\u00e9 pravidelne builduj\u00fa a testuj\u00fa k\u00f3d.
 report.ci-management.general.intro                                 = Tento projekt pou\u017e\u00edva Continuous Integration System (priebe\u017en\u00fd integra\u010dn\u00fd syst\u00e9m).
 report.ci-management.hudson.intro                                  = Tento projekt pou\u017e\u00edva {Hudson, http://hudson-ci.org/}.
-report.ci-management.jenkins.intro                                 = Tento projekt pou\u017e\u00edva {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.jenkins.intro                                 = Tento projekt pou\u017e\u00edva {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Tento projekt pou\u017e\u00edva {Luntbuild, http://luntbuild.javaforge.com/}.
 report.ci-management.travis.intro                                  = Tento projekt pou\u017e\u00edva {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Syst\u00e9m priebe\u017enej integr\u00e1cie (Continuous Integration)
