--- a/src/main/resources/project-info-reports_tr.properties
+++ b/src/main/resources/project-info-reports_tr.properties
@@ -24,7 +24,7 @@ report.ci-management.cruisecontrol.intro                           = This projec
 report.ci-management.description                                   = Bu link kodlar\u00fd s\u00fdk aral\u00fdklarla ve belirli bir temelde derleyen ve test eden t\u00fcm s\u00fcrekli entegrasyon proseslerine eri\u00feim sa\u00f0lar.
 report.ci-management.general.intro                                 = Bu proje S\u00fcrekli Entegrasyon Sistemi uygulamas\u00fdn\u00fd kullan\u00fdr.
 report.ci-management.hudson.intro                                  = This project uses {Hudson, http://hudson-ci.org/}.
-report.ci-management.jenkins.intro                                 = This project uses {Jenkins, https://jenkins-ci.org/}.
+report.ci-management.jenkins.intro                                 = This project uses {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = This project uses {Luntbuild, http://luntbuild.javaforge.com/}.
 report.ci-management.travis.intro                                  = This project uses {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = S\u00fcrekli Entegrasyon
