[MPIR-395] - Add TeamCity as a possibility for ciManagement entry

--- a/src/main/resources/project-info-reports_es.properties
+++ b/src/main/resources/project-info-reports_es.properties
@@ -26,6 +26,7 @@ report.ci-management.general.intro                                 = Este proyec
 report.ci-management.hudson.intro                                  = Este proyecto usa {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Este proyecto usa {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Este proyecto usa {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.teamcity.intro                                = Este proyecto usa {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Este proyecto usa {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Integraci\u00f3n Continua
 report.ci-management.nocim                                         = No hay ning\u00fan sistema de integraci\u00f3n continua definido. Compruebe de nuevo dentro de algunos d\u00edas.
