--- a/src/main/resources/project-info-reports_de.properties
+++ b/src/main/resources/project-info-reports_de.properties
@@ -26,6 +26,7 @@ report.ci-management.general.intro                                 = Dieses Proj
 report.ci-management.hudson.intro                                  = Dieses Projekt verwendet {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Dieses Projekt verwendet {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Dieses Projekt verwendet {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.teamcity.intro                                = Dieses Projekt verwendet {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Dieses Projekt verwendet {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Continuous-Integration
 report.ci-management.nocim                                         = Es wurde kein System zur kontinuierlichen Integration definiert.
