--- a/src/main/resources/project-info-reports_it.properties
+++ b/src/main/resources/project-info-reports_it.properties
@@ -24,6 +24,7 @@ report.ci-management.cruisecontrol.intro                           = Questo prog
 report.ci-management.hudson.intro                                  = Questo progetto usa {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Questo progetto usa {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Questo progetto usa {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.teamcity.intro                                = Questo progetto usa {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Questo progetto usa {Travis CI, https://travis-ci.org/}.
 report.dependencies.graph.tables.licenses                          = Licenze
 report.dependencies.graph.tables.unknown                           = Non definita
