--- a/src/main/resources/project-info-reports_lt.properties
+++ b/src/main/resources/project-info-reports_lt.properties
@@ -26,6 +26,7 @@ report.ci-management.general.intro                                 = \u0160is pr
 report.ci-management.hudson.intro                                  = \u0160is projektas naudoja {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = \u0160is projektas naudoja {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = \u0160is projektas naudoja {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.teamcity.intro                                = \u0160is projektas naudoja {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = \u0160is projektas naudoja {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Testinis integravimas
 report.ci-management.nocim                                         = Testinio integravimo sistema nenaudojama. Pabandykit v\u0117liau.
