--- a/src/main/resources/project-info-reports_nl.properties
+++ b/src/main/resources/project-info-reports_nl.properties
@@ -25,6 +25,7 @@ report.ci-management.general.intro                                 = Dit project
 report.ci-management.hudson.intro                                  = Dit project gebruikt {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Dit project gebruikt {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Dit project gebruikt {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.teamcity.intro                                = Dit project gebruikt {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Dit project gebruikt {Travis CI, https://travis-ci.org/}.
 report.dependencies.file.details.columntitle.debuginformation      = Geeft aan of deze afhankelijkheden met debug-informatie gecompileerd zijn.
 report.dependencies.graph.tables.licenses                          = Vergunningen
