--- a/src/main/resources/project-info-reports_no.properties
+++ b/src/main/resources/project-info-reports_no.properties
@@ -26,6 +26,7 @@ report.ci-management.general.intro                                 = Dette prosj
 report.ci-management.hudson.intro                                  = Dette prosjektet bruker {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Dette prosjektet bruker {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Dette prosjektet bruker {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.teamcity.intro                                = Dette prosjektet bruker {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Dette prosjektet bruker {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Kontinueriig integrasjon
 report.ci-management.nocim                                         = Intet kontinuerlig integrasjons administrasjons system er definert. Vennligst sjekk igjen ved en senere anledning.
