--- a/src/main/resources/project-info-reports_sv.properties
+++ b/src/main/resources/project-info-reports_sv.properties
@@ -26,6 +26,7 @@ report.ci-management.general.intro                                 = Detta proje
 report.ci-management.hudson.intro                                  = Detta projekt anv\u00e4nder {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = Detta projekt anv\u00e4nder {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = Detta projekt anv\u00e4nder {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.teamcity.intro                                = Detta projekt anv\u00e4nder {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = Detta projekt anv\u00e4nder {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = Continuous Integration
 report.ci-management.nocim                                         = Projektet har inget continuous integration-system definierat. F\u00f6rs\u00f6k igen senare.
