--- a/src/main/resources/project-info-reports_tr.properties
+++ b/src/main/resources/project-info-reports_tr.properties
@@ -26,6 +26,7 @@ report.ci-management.general.intro                                 = Bu proje S\
 report.ci-management.hudson.intro                                  = This project uses {Hudson, http://hudson-ci.org/}.
 report.ci-management.jenkins.intro                                 = This project uses {Jenkins, https://www.jenkins.io/}.
 report.ci-management.luntbuild.intro                               = This project uses {Luntbuild, http://luntbuild.javaforge.com/}.
+report.ci-management.teamcity.intro                                = This project uses {TeamCity, https://www.jetbrains.com/teamcity/}.
 report.ci-management.travis.intro                                  = This project uses {Travis CI, https://travis-ci.org/}.
 report.ci-management.name                                          = S\u00fcrekli Entegrasyon
 report.ci-management.nocim                                         = Herhangi bir S\u00fcrekli Entegrasyon Y\u00f6netim Sistemi tan\u00fdmlanmam\u00fd\u00fet\u00fdr. L\u00fctfen ileri bir tarihte tekrar kontrol ediniz.
